<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iut.projetandroid.elgarrailavigne.geosms.Main2Activity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/destinataires"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="@color/colorPrimary"
                    android:text="@string/choixDate"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/choixHeure"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimary"
                android:text="@string/choixDate"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimaryDark"
                android:text="@string/choixHeure"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimary"
                android:text="@string/choixDate"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimaryDark"
                android:text="@string/choixHeure"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimary"
                android:text="@string/choixDate"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimaryDark"
                android:text="@string/choixHeure"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimary"
                android:text="@string/choixDate"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimaryDark"
                android:text="@string/choixHeure"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimary"
                android:text="@string/choixDate"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/colorPrimaryDark"
                android:text="@string/choixHeure"/>







        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
